S151 M1: H4 abre con O-instalación (9 condiciones, 0 cumplidas) tras medir el bundle en Linux y Windows; archivado de S149
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>